--- a/analysis/Refugee Data, Sketching.ipynb
+++ b/analysis/Refugee Data, Sketching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +20,7 @@
    },
    "outputs": [],
    "source": [
-    "rdata = pd.read_csv('../data/s.csv')\n",
+    "rdata = pd.read_csv('../data/syrian-refugee-counts.csv')\n",
     "\n",
     "as1 = rdata.Refugees != '*'\n",
     "as2 = rdata.AsylumSeekers != '*'\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
        "4     Lebanon   500  1980"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,85 +116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Destination</th>\n",
-       "      <th>2011_pop</th>\n",
-       "      <th>2012_pop</th>\n",
-       "      <th>2013_pop</th>\n",
-       "      <th>2014_pop</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Aruba</td>\n",
-       "      <td>101932</td>\n",
-       "      <td>102384</td>\n",
-       "      <td>102911</td>\n",
-       "      <td>103431</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Andorra</td>\n",
-       "      <td>77865</td>\n",
-       "      <td>78360</td>\n",
-       "      <td>79218</td>\n",
-       "      <td>80153</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>29105480</td>\n",
-       "      <td>29824536</td>\n",
-       "      <td>30551674</td>\n",
-       "      <td>31280518</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>20180490</td>\n",
-       "      <td>20820525</td>\n",
-       "      <td>21471618</td>\n",
-       "      <td>22137261</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>2904780</td>\n",
-       "      <td>2900489</td>\n",
-       "      <td>2897366</td>\n",
-       "      <td>2894475</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Destination  2011_pop  2012_pop  2013_pop  2014_pop\n",
-       "0        Aruba    101932    102384    102911    103431\n",
-       "1      Andorra     77865     78360     79218     80153\n",
-       "2  Afghanistan  29105480  29824536  30551674  31280518\n",
-       "3       Angola  20180490  20820525  21471618  22137261\n",
-       "4      Albania   2904780   2900489   2897366   2894475"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pop = pd.read_csv('../data/demographics-wb.csv')\n",
     "pop = pop[['Country Name',  '2011', '2012', '2013','2014']]\n",
@@ -203,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -261,7 +187,7 @@
        "      <td>39428</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>United States of America</th>\n",
+       "      <th>United States</th>\n",
        "      <td>34247</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -269,21 +195,21 @@
        "</div>"
       ],
       "text/plain": [
-       "                                T\n",
-       "Destination                      \n",
-       "Turkey                    2393091\n",
-       "Lebanon                   2134927\n",
-       "Jordan                     829210\n",
-       "Iraq                       528157\n",
-       "Egypt                      283099\n",
-       "Germany                    256993\n",
-       "Sweden                     137136\n",
-       "Netherlands                 51502\n",
-       "Libya                       39428\n",
-       "United States of America    34247"
+       "                     T\n",
+       "Destination           \n",
+       "Turkey         2393091\n",
+       "Lebanon        2134927\n",
+       "Jordan          829210\n",
+       "Iraq            528157\n",
+       "Egypt           283099\n",
+       "Germany         256993\n",
+       "Sweden          137136\n",
+       "Netherlands      51502\n",
+       "Libya            39428\n",
+       "United States    34247"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,34 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "r = rdata[rdata['Year'] > 2009]\n",
-    "r = r.drop(['Year'], 1)\n",
-    "g = r.groupby('Destination').sum()\n",
-    "top10 = g.sort('T', ascending=False).head(10)\n",
-    "top10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -341,30 +240,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>ref_2011</th>\n",
+       "      <th>ref_2012</th>\n",
+       "      <th>ref_2013</th>\n",
+       "      <th>ref_2014</th>\n",
+       "      <th>pop_2011</th>\n",
+       "      <th>pop_2012</th>\n",
+       "      <th>pop_2013</th>\n",
+       "      <th>pop_2014</th>\n",
+       "      <th>rate_avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>T</td>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>224.0</td>\n",
+       "      <td>248666</td>\n",
+       "      <td>585711</td>\n",
+       "      <td>1558149.0</td>\n",
+       "      <td>73058638</td>\n",
+       "      <td>73997128</td>\n",
+       "      <td>74932641</td>\n",
+       "      <td>75837020</td>\n",
+       "      <td>0.020546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>T</td>\n",
+       "      <td>Lebanon</td>\n",
+       "      <td>245.5</td>\n",
+       "      <td>127181</td>\n",
+       "      <td>851615</td>\n",
+       "      <td>573955.5</td>\n",
+       "      <td>4382790</td>\n",
+       "      <td>4424888</td>\n",
+       "      <td>4467390</td>\n",
+       "      <td>4510301</td>\n",
+       "      <td>0.127254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>T</td>\n",
+       "      <td>Iraq</td>\n",
+       "      <td>1714.0</td>\n",
+       "      <td>64771</td>\n",
+       "      <td>213973</td>\n",
+       "      <td>235421.0</td>\n",
+       "      <td>31760020</td>\n",
+       "      <td>32578209</td>\n",
+       "      <td>33417476</td>\n",
+       "      <td>34278364</td>\n",
+       "      <td>0.006868</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>T</td>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>12836</td>\n",
+       "      <td>131659</td>\n",
+       "      <td>138381.0</td>\n",
+       "      <td>79392466</td>\n",
+       "      <td>80721874</td>\n",
+       "      <td>82056378</td>\n",
+       "      <td>83386739</td>\n",
+       "      <td>0.001660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>T</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>14868.0</td>\n",
+       "      <td>24151</td>\n",
+       "      <td>31819</td>\n",
+       "      <td>70585.0</td>\n",
+       "      <td>81797673</td>\n",
+       "      <td>80425823</td>\n",
+       "      <td>80645605</td>\n",
+       "      <td>80889505</td>\n",
+       "      <td>0.000873</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    level_0 Destination  ref_2011  ref_2012  ref_2013   ref_2014  pop_2011  \\\n",
+       "122       T      Turkey     224.0    248666    585711  1558149.0  73058638   \n",
+       "67        T     Lebanon     245.5    127181    851615   573955.5   4382790   \n",
+       "55        T        Iraq    1714.0     64771    213973   235421.0  31760020   \n",
+       "41        T       Egypt      94.0     12836    131659   138381.0  79392466   \n",
+       "47        T     Germany   14868.0     24151     31819    70585.0  81797673   \n",
+       "\n",
+       "     pop_2012  pop_2013  pop_2014  rate_avg  \n",
+       "122  73997128  74932641  75837020  0.020546  \n",
+       "67    4424888   4467390   4510301  0.127254  \n",
+       "55   32578209  33417476  34278364  0.006868  \n",
+       "41   80721874  82056378  83386739  0.001660  \n",
+       "47   80425823  80645605  80889505  0.000873  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rfs = df.reset_index()\n",
     "rfs = rfs.merge(pop, on='Destination', how='left')\n",
-    "rfs.to_json(orient='records', path_or_buf='../app/src/data/stats.json')"
+    "rfs['rate_avg'] = rfs[2014] / rfs['2014_pop']\n",
+    "rfs = rfs.sort(2014, ascending=0)\n",
+    "rfs.columns = ['level_0', 'Destination', 'ref_2011', 'ref_2012', 'ref_2013', 'ref_2014', 'pop_2011',\n",
+    "       'pop_2012', 'pop_2013', 'pop_2014', 'rate_avg']\n",
+    "rfs.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "rfs.head(10)\n",
-    "rfs['T'] = rfs[2011] + rfs[2012] + rfs[2013] + rfs[2014]\n",
-    "\n",
-    "rfs['rate_avg'] = rfs['T'] / rfs['2014_pop']\n",
-    "rfs.sort('T', ascending=0).to_json(orient='records', path_or_buf='../app/src/data/stats.json')"
+    "rfs.sort('ref_2014', ascending=0).to_json(orient='records', path_or_buf='../app/src/data/stats.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.90692555423235355"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfs[:4]['ref_2014'].sum() / rfs['ref_2014'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "257172.0"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " rfs[4:]['ref_2014'].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.14344"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "257172.0 / 50000"
    ]
   },
   {
@@ -393,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
