--- a/analysis/Refugee Data, Sketching.ipynb
+++ b/analysis/Refugee Data, Sketching.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -393,21 +393,21 @@
     {
      "data": {
       "text/plain": [
-       "0.88239555025182004"
+       "0.92322523243142129"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rfs[:4]['ref_2014'].sum() / rfs['ref_2014'].sum()"
+    "rfs[:5]['ref_2014'].sum() / rfs['ref_2014'].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
@@ -415,16 +415,16 @@
     {
      "data": {
       "text/plain": [
-       "398588.0"
+       "3129018.5"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " rfs[5:]['ref_2014'].sum()"
+    "rfs[:5]['ref_2014'].sum()"
    ]
   },
   {
@@ -445,13 +445,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "3129018.5 / 3389225.5"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -462,7 +460,7 @@
        "0.92322523243142129"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
