Fixed Jordan Data

--- a/analysis/Refugee Data, Sketching.ipynb
+++ b/analysis/Refugee Data, Sketching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
        "4     Lebanon   500  1980"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +209,7 @@
        "United States    34247"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,14 +225,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "rd = rdata[rdata['Year'] > 2010]\n",
-    "d_pivot = pd.pivot_table(rd, columns=['Destination', 'Year'], values=['T'])\n",
+    "d_pivot = pd.pivot_table(rd, columns=['Destination', 'Year'], values=['T'], aggfunc='sum')\n",
     "df = d_pivot.unstack()\n",
     "# to output:\n",
     "df.reset_index().to_json(orient='records', path_or_buf='../app/src/data/stats.json')"
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -271,10 +271,10 @@
        "      <th>125</th>\n",
        "      <td>T</td>\n",
        "      <td>Turkey</td>\n",
-       "      <td>224.0</td>\n",
+       "      <td>224</td>\n",
        "      <td>248666</td>\n",
        "      <td>585711</td>\n",
-       "      <td>1558149.0</td>\n",
+       "      <td>1558149</td>\n",
        "      <td>73058638</td>\n",
        "      <td>73997128</td>\n",
        "      <td>74932641</td>\n",
@@ -282,13 +282,27 @@
        "      <td>0.020546</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>T</td>\n",
+       "      <td>Lebanon</td>\n",
+       "      <td>491</td>\n",
+       "      <td>127181</td>\n",
+       "      <td>851615</td>\n",
+       "      <td>1147911</td>\n",
+       "      <td>4382790</td>\n",
+       "      <td>4424888</td>\n",
+       "      <td>4467390</td>\n",
+       "      <td>4510301</td>\n",
+       "      <td>0.254509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>62</th>\n",
        "      <td>T</td>\n",
        "      <td>Jordan</td>\n",
-       "      <td>2811.0</td>\n",
+       "      <td>2811</td>\n",
        "      <td>239289</td>\n",
        "      <td>585304</td>\n",
-       "      <td>623112.0</td>\n",
+       "      <td>623112</td>\n",
        "      <td>6181000</td>\n",
        "      <td>6318000</td>\n",
        "      <td>6460000</td>\n",
@@ -296,27 +310,13 @@
        "      <td>0.094311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>T</td>\n",
-       "      <td>Lebanon</td>\n",
-       "      <td>245.5</td>\n",
-       "      <td>127181</td>\n",
-       "      <td>851615</td>\n",
-       "      <td>573955.5</td>\n",
-       "      <td>4382790</td>\n",
-       "      <td>4424888</td>\n",
-       "      <td>4467390</td>\n",
-       "      <td>4510301</td>\n",
-       "      <td>0.127254</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>56</th>\n",
        "      <td>T</td>\n",
        "      <td>Iraq</td>\n",
-       "      <td>1714.0</td>\n",
+       "      <td>1714</td>\n",
        "      <td>64771</td>\n",
        "      <td>213973</td>\n",
-       "      <td>235421.0</td>\n",
+       "      <td>235421</td>\n",
        "      <td>31760020</td>\n",
        "      <td>32578209</td>\n",
        "      <td>33417476</td>\n",
@@ -327,10 +327,10 @@
        "      <th>41</th>\n",
        "      <td>T</td>\n",
        "      <td>Egypt</td>\n",
-       "      <td>94.0</td>\n",
+       "      <td>94</td>\n",
        "      <td>12836</td>\n",
        "      <td>131659</td>\n",
-       "      <td>138381.0</td>\n",
+       "      <td>138381</td>\n",
        "      <td>79392466</td>\n",
        "      <td>80721874</td>\n",
        "      <td>82056378</td>\n",
@@ -342,22 +342,22 @@
        "</div>"
       ],
       "text/plain": [
-       "    level_0 Destination  ref_2011  ref_2012  ref_2013   ref_2014  pop_2011  \\\n",
-       "125       T      Turkey     224.0    248666    585711  1558149.0  73058638   \n",
-       "62        T      Jordan    2811.0    239289    585304   623112.0   6181000   \n",
-       "68        T     Lebanon     245.5    127181    851615   573955.5   4382790   \n",
-       "56        T        Iraq    1714.0     64771    213973   235421.0  31760020   \n",
-       "41        T       Egypt      94.0     12836    131659   138381.0  79392466   \n",
+       "    level_0 Destination  ref_2011  ref_2012  ref_2013  ref_2014  pop_2011  \\\n",
+       "125       T      Turkey       224    248666    585711   1558149  73058638   \n",
+       "68        T     Lebanon       491    127181    851615   1147911   4382790   \n",
+       "62        T      Jordan      2811    239289    585304    623112   6181000   \n",
+       "56        T        Iraq      1714     64771    213973    235421  31760020   \n",
+       "41        T       Egypt        94     12836    131659    138381  79392466   \n",
        "\n",
        "     pop_2012  pop_2013  pop_2014  rate_avg  \n",
        "125  73997128  74932641  75837020  0.020546  \n",
+       "68    4424888   4467390   4510301  0.254509  \n",
        "62    6318000   6460000   6607000  0.094311  \n",
-       "68    4424888   4467390   4510301  0.127254  \n",
        "56   32578209  33417476  34278364  0.006868  \n",
        "41   80721874  82056378  83386739  0.001660  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -393,10 +393,10 @@
     {
      "data": {
       "text/plain": [
-       "0.92322523243142129"
+       "0.93434390203223117"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -415,10 +415,10 @@
     {
      "data": {
       "text/plain": [
-       "3129018.5"
+       "3702974.0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,27 +429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9232252324314213"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -457,10 +446,10 @@
     {
      "data": {
       "text/plain": [
-       "0.92322523243142129"
+       "0.93434390203223117"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
